Set nn parameters to be nn_preconditioner decorator input

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "inputHidden": false,
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "inputHidden": false,
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "metadata": {
     "inputHidden": false,
     "outputHidden": false
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "inputHidden": false,
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "inputHidden": false,
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "inputHidden": false,
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "inputHidden": false,
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
       "text/plain": "array([3, 2])"
      },
      "metadata": {},
-     "execution_count": 69
+     "execution_count": 11
     }
    ],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
       "text/plain": "[array([3, 2]), array([1.96153846, 1.30769231]), array([2., 1.])]"
      },
      "metadata": {},
-     "execution_count": 72
+     "execution_count": 14
     }
    ],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
       "text/plain": "tensor([], size=(0, 2))"
      },
      "metadata": {},
-     "execution_count": 74
+     "execution_count": 16
     }
    ],
    "source": [
@@ -304,16 +304,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "tensor([-1.0972, -0.5366])"
+      "text/plain": "tensor([-0.2623, -0.4574])"
      },
      "metadata": {},
-     "execution_count": 75
+     "execution_count": 17
     }
    ],
    "source": [
@@ -322,16 +322,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "tensor([[-1.0972, -0.5366]])"
+      "text/plain": "tensor([[-0.2623, -0.4574]])"
      },
      "metadata": {},
-     "execution_count": 76
+     "execution_count": 18
     }
    ],
    "source": [
@@ -341,16 +341,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "tensor([[-1.0972, -0.5366],\n        [-1.0972, -0.5366]])"
+      "text/plain": "tensor([[-0.2623, -0.4574],\n        [-0.2623, -0.4574]])"
      },
      "metadata": {},
-     "execution_count": 77
+     "execution_count": 19
     }
    ],
    "source": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
       "text/plain": "[array([3, 2]), array([1.96153846, 1.30769231]), array([2., 1.])]"
      },
      "metadata": {},
-     "execution_count": 79
+     "execution_count": 21
     }
    ],
    "source": [
@@ -386,18 +386,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "@nn_preconditioner(retrain_freq=2, debug=True)\n",
+    "@nn_preconditioner(retrain_freq=2, debug=True,InputDim=2,HiddenDim=100,OutputDim=2)\n",
     "def MLGMRES(A, b, x0, e, nmax_iter):\n",
     "    return GMRES(A, b, x0, e, nmax_iter)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
       "text/plain": "[array([3., 2.]), array([1.96153846, 1.30769231]), array([2., 1.])]"
      },
      "metadata": {},
-     "execution_count": 81
+     "execution_count": 23
     }
    ],
    "source": [
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
       "text/plain": "[array([3.1, 2.1]),\n array([2.00470377, 1.35802513]),\n array([2.07142857, 1.02857143])]"
      },
      "metadata": {},
-     "execution_count": 82
+     "execution_count": 24
     }
    ],
    "source": [
@@ -440,16 +440,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "[array([0.03048832, 0.10636806]),\n array([2.07433118, 1.0622452 ]),\n array([2.11428571, 1.08571429])]"
+      "text/plain": "[array([ 0.02922029, -0.18832302]),\n array([2.11798878, 1.08819891]),\n array([2.11428571, 1.08571429])]"
      },
      "metadata": {},
-     "execution_count": 83
+     "execution_count": 25
     }
    ],
    "source": [
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -470,10 +470,10 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "[array([0.03511662, 0.14372292]),\n array([2.05088798, 1.07063828]),\n array([2.1, 1.1])]"
+      "text/plain": "[array([ 0.03549643, -0.27095661]),\n array([2.11044698, 1.10697372]),\n array([2.1, 1.1])]"
      },
      "metadata": {},
-     "execution_count": 84
+     "execution_count": 26
     }
    ],
    "source": [
@@ -483,16 +483,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "[array([-0.1559162 , -0.38095117]),\n array([1.72176772, 0.75602093]),\n array([1.54285714, 0.65714286])]"
+      "text/plain": "[array([-0.10228174,  0.91851342]),\n array([1.49325211, 0.62417187]),\n array([1.54285714, 0.65714286])]"
      },
      "metadata": {},
-     "execution_count": 85
+     "execution_count": 27
     }
    ],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -513,10 +513,10 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "[array([-0.8558148 ,  0.71955097]),\n array([0.8958915, 0.1773815]),\n array([ 0.4, -0.2])]"
+      "text/plain": "[array([-0.59030252,  2.18956411]),\n array([ 0.54942084, -0.09750034]),\n array([ 0.4, -0.2])]"
      },
      "metadata": {},
-     "execution_count": 86
+     "execution_count": 28
     }
    ],
    "source": [
@@ -526,16 +526,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "[array([ 0.29637308, -0.72807264]),\n array([2.27602299, 0.71300684]),\n array([2.4, 0.8])]"
+      "text/plain": "[array([0.40446289, 0.15053272]),\n array([2.33516369, 0.718055  ]),\n array([2.4, 0.8])]"
      },
      "metadata": {},
-     "execution_count": 87
+     "execution_count": 29
     }
    ],
    "source": [
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -556,10 +556,10 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "[array([-0.02402194,  0.16289425]),\n array([2.16724772, 1.12577074]),\n array([2.17142857, 1.12857143])]"
+      "text/plain": "[array([-0.01001329, -0.03236413]),\n array([2.18416861, 1.13597938]),\n array([2.17142857, 1.12857143])]"
      },
      "metadata": {},
-     "execution_count": 88
+     "execution_count": 30
     }
    ],
    "source": [
@@ -569,16 +569,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "[array([-0.03171067,  0.37698913]),\n array([3.22866338, 1.92404404]),\n array([3.25714286, 1.94285714])]"
+      "text/plain": "[array([ 0.16482563, -0.11899924]),\n array([3.16110972, 1.86882464]),\n array([3.25714286, 1.94285714])]"
      },
      "metadata": {},
-     "execution_count": 89
+     "execution_count": 31
     }
    ],
    "source": [
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -599,10 +599,10 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "[array([-0.04920762, -0.17728877]),\n array([2.60816887, 1.695657  ]),\n array([2.54285714, 1.65714286])]"
+      "text/plain": "[array([ 0.26160986, -0.20421576]),\n array([2.39075618, 1.54066108]),\n array([2.54285714, 1.65714286])]"
      },
      "metadata": {},
-     "execution_count": 90
+     "execution_count": 32
     }
    ],
    "source": [
@@ -612,16 +612,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "[array([ 0.00070102, -0.26077914]),\n array([2.57954591, 1.68089934]),\n array([2.54285714, 1.65714286])]"
+      "text/plain": "[array([ 0.06679101, -0.03977418]),\n array([2.50395164, 1.62665997]),\n array([2.54285714, 1.65714286])]"
      },
      "metadata": {},
-     "execution_count": 91
+     "execution_count": 33
     }
    ],
    "source": [
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -642,10 +642,10 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "[array([ 0.00070102, -0.26077914]),\n array([2.57954591, 1.68089934]),\n array([2.54285714, 1.65714286])]"
+      "text/plain": "[array([ 0.06679101, -0.03977418]),\n array([2.50395164, 1.62665997]),\n array([2.54285714, 1.65714286])]"
      },
      "metadata": {},
-     "execution_count": 92
+     "execution_count": 34
     }
    ],
    "source": [
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
       "text/plain": "12"
      },
      "metadata": {},
-     "execution_count": 93
+     "execution_count": 35
     }
    ],
    "source": [
@@ -729,13 +729,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "t=  9900, loss=0.03224: 100%|██████████| 10000/10000 [00:04<00:00, 2374.68it/s]\n"
+     "text": "t=  9900, loss=0.01801: 100%|██████████| 10000/10000 [00:03<00:00, 2706.47it/s]\n"
     }
    ],
    "source": [
@@ -781,16 +781,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "matrix([[-0.72728243,  2.57684015]])"
+      "text/plain": "matrix([[-1.23950583, -0.3039158 ]])"
      },
      "metadata": {},
-     "execution_count": 95
+     "execution_count": 37
     }
    ],
    "source": [
@@ -799,16 +799,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "tensor([-0.7287,  2.5746], grad_fn=<AddBackward0>)"
+      "text/plain": "tensor([-1.2395, -0.2751], grad_fn=<AddBackward0>)"
      },
      "metadata": {},
-     "execution_count": 96
+     "execution_count": 38
     }
    ],
    "source": [
@@ -817,16 +817,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "tensor([-0.7273,  2.5768])"
+      "text/plain": "tensor([-1.2395, -0.3039])"
      },
      "metadata": {},
-     "execution_count": 97
+     "execution_count": 39
     }
    ],
    "source": [
@@ -835,16 +835,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "tensor([-0.0475, -0.6798])"
+      "text/plain": "tensor([-0.7517, -0.4878])"
      },
      "metadata": {},
-     "execution_count": 98
+     "execution_count": 40
     }
    ],
    "source": [
