adjust module scheme

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -44,9 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src_dir.gmres         import GMRES, matmul_a, mat_to_a\n",
-    "from src_dir.nn_collection import TwoLayerNet\n",
-    "from src_dir.nn_predictor  import nn_preconditioner"
+    "from src_dir         import *"
    ]
   },
   {
@@ -310,7 +308,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "tensor([-0.2623, -0.4574])"
+      "text/plain": "tensor([-0.7487, -0.9444])"
      },
      "metadata": {},
      "execution_count": 17
@@ -328,7 +326,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "tensor([[-0.2623, -0.4574]])"
+      "text/plain": "tensor([[-0.7487, -0.9444]])"
      },
      "metadata": {},
      "execution_count": 18
@@ -347,7 +345,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "tensor([[-0.2623, -0.4574],\n        [-0.2623, -0.4574]])"
+      "text/plain": "tensor([[-0.7487, -0.9444],\n        [-0.7487, -0.9444]])"
      },
      "metadata": {},
      "execution_count": 19
@@ -446,7 +444,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "[array([ 0.02922029, -0.18832302]),\n array([2.11798878, 1.08819891]),\n array([2.11428571, 1.08571429])]"
+      "text/plain": "[array([ 0.05736668, -0.18781185]),\n array([2.09640111, 1.07336853]),\n array([2.11428571, 1.08571429])]"
      },
      "metadata": {},
      "execution_count": 25
@@ -470,7 +468,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "[array([ 0.03549643, -0.27095661]),\n array([2.11044698, 1.10697372]),\n array([2.1, 1.1])]"
+      "text/plain": "[array([ 0.08863897, -0.32215796]),\n array([2.07666546, 1.08397713]),\n array([2.1, 1.1])]"
      },
      "metadata": {},
      "execution_count": 26
@@ -489,7 +487,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "[array([-0.10228174,  0.91851342]),\n array([1.49325211, 0.62417187]),\n array([1.54285714, 0.65714286])]"
+      "text/plain": "[array([-0.31822221,  0.76349616]),\n array([1.67826992, 0.75229963]),\n array([1.54285714, 0.65714286])]"
      },
      "metadata": {},
      "execution_count": 27
@@ -513,7 +511,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "[array([-0.59030252,  2.18956411]),\n array([ 0.54942084, -0.09750034]),\n array([ 0.4, -0.2])]"
+      "text/plain": "[array([-1.17568986,  2.55004096]),\n array([0.93374715, 0.17750212]),\n array([ 0.4, -0.2])]"
      },
      "metadata": {},
      "execution_count": 28
@@ -532,7 +530,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "[array([0.40446289, 0.15053272]),\n array([2.33516369, 0.718055  ]),\n array([2.4, 0.8])]"
+      "text/plain": "[array([0.07233549, 1.03914738]),\n array([2.19288966, 0.66854713]),\n array([2.4, 0.8])]"
      },
      "metadata": {},
      "execution_count": 29
@@ -556,7 +554,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "[array([-0.01001329, -0.03236413]),\n array([2.18416861, 1.13597938]),\n array([2.17142857, 1.12857143])]"
+      "text/plain": "[array([-0.00077565, -0.03177881]),\n array([2.17659539, 1.13189294]),\n array([2.17142857, 1.12857143])]"
      },
      "metadata": {},
      "execution_count": 30
@@ -575,7 +573,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "[array([ 0.16482563, -0.11899924]),\n array([3.16110972, 1.86882464]),\n array([3.25714286, 1.94285714])]"
+      "text/plain": "[array([0.01898415, 0.13135004]),\n array([3.22292831, 1.92164325]),\n array([3.25714286, 1.94285714])]"
      },
      "metadata": {},
      "execution_count": 31
@@ -599,7 +597,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "[array([ 0.26160986, -0.20421576]),\n array([2.39075618, 1.54066108]),\n array([2.54285714, 1.65714286])]"
+      "text/plain": "[array([ 0.08418925, -0.08350039]),\n array([2.49470717, 1.62100563]),\n array([2.54285714, 1.65714286])]"
      },
      "metadata": {},
      "execution_count": 32
@@ -618,7 +616,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "[array([ 0.06679101, -0.03977418]),\n array([2.50395164, 1.62665997]),\n array([2.54285714, 1.65714286])]"
+      "text/plain": "[array([ 0.03818316, -0.04928923]),\n array([2.52188293, 1.64173626]),\n array([2.54285714, 1.65714286])]"
      },
      "metadata": {},
      "execution_count": 33
@@ -642,7 +640,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "[array([ 0.06679101, -0.03977418]),\n array([2.50395164, 1.62665997]),\n array([2.54285714, 1.65714286])]"
+      "text/plain": "[array([ 0.03818316, -0.04928923]),\n array([2.52188293, 1.64173626]),\n array([2.54285714, 1.65714286])]"
      },
      "metadata": {},
      "execution_count": 34
@@ -729,13 +727,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "t=  9900, loss=0.01801: 100%|██████████| 10000/10000 [00:03<00:00, 2706.47it/s]\n"
+     "text": "t=  9900, loss=0.03992: 100%|██████████| 10000/10000 [00:03<00:00, 2616.27it/s]\n"
     }
    ],
    "source": [
@@ -787,7 +785,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "matrix([[-1.23950583, -0.3039158 ]])"
+      "text/plain": "matrix([[-0.14745751,  1.71819636]])"
      },
      "metadata": {},
      "execution_count": 37
@@ -805,7 +803,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "tensor([-1.2395, -0.2751], grad_fn=<AddBackward0>)"
+      "text/plain": "tensor([-0.1476,  1.7152], grad_fn=<AddBackward0>)"
      },
      "metadata": {},
      "execution_count": 38
@@ -823,7 +821,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "tensor([-1.2395, -0.3039])"
+      "text/plain": "tensor([-0.1475,  1.7182])"
      },
      "metadata": {},
      "execution_count": 39
@@ -841,7 +839,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "tensor([-0.7517, -0.4878])"
+      "text/plain": "tensor([ 0.1612, -0.3087])"
      },
      "metadata": {},
      "execution_count": 40
