implement tolerance in GMRES

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -67,9 +67,11 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "Populating the interactive namespace from numpy and matplotlib\n"
+     "output_type": "stream",
+     "text": [
+      "Populating the interactive namespace from numpy and matplotlib\n"
+     ]
     }
    ],
    "source": [
@@ -223,12 +225,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "array([3, 2])"
+      "text/plain": [
+       "array([3, 2])"
+      ]
      },
+     "execution_count": 11,
      "metadata": {},
-     "execution_count": 11
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -260,12 +264,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "[array([3, 2]), array([1.96153846, 1.30769231]), array([2., 1.])]"
+      "text/plain": [
+       "[array([3, 2]), array([1.96153846, 1.30769231]), array([2., 1.])]"
+      ]
      },
+     "execution_count": 14,
      "metadata": {},
-     "execution_count": 14
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -288,12 +294,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "tensor([], size=(0, 2))"
+      "text/plain": [
+       "tensor([], size=(0, 2))"
+      ]
      },
+     "execution_count": 16,
      "metadata": {},
-     "execution_count": 16
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -306,12 +314,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "tensor([ 1.0528, -0.2243])"
+      "text/plain": [
+       "tensor([ 1.0528, -0.2243])"
+      ]
      },
+     "execution_count": 17,
      "metadata": {},
-     "execution_count": 17
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -324,12 +334,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "tensor([[ 1.0528, -0.2243]])"
+      "text/plain": [
+       "tensor([[ 1.0528, -0.2243]])"
+      ]
      },
+     "execution_count": 18,
      "metadata": {},
-     "execution_count": 18
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -343,12 +355,15 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "tensor([[ 1.0528, -0.2243],\n        [ 1.0528, -0.2243]])"
+      "text/plain": [
+       "tensor([[ 1.0528, -0.2243],\n",
+       "        [ 1.0528, -0.2243]])"
+      ]
      },
+     "execution_count": 19,
      "metadata": {},
-     "execution_count": 19
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -370,12 +385,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "[array([3, 2]), array([1.96153846, 1.30769231]), array([2., 1.])]"
+      "text/plain": [
+       "[array([3, 2]), array([1.96153846, 1.30769231]), array([2., 1.])]"
+      ]
      },
+     "execution_count": 21,
      "metadata": {},
-     "execution_count": 21
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -399,12 +416,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "[array([3., 2.]), array([1.96153846, 1.30769231]), array([2., 1.])]"
+      "text/plain": [
+       "[array([3., 2.]), array([1.96153846, 1.30769231]), array([2., 1.])]"
+      ]
      },
+     "execution_count": 23,
      "metadata": {},
-     "execution_count": 23
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -418,17 +437,24 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "retraining\n2\n"
+     "output_type": "stream",
+     "text": [
+      "retraining\n",
+      "2\n"
+     ]
     },
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "[array([3.1, 2.1]),\n array([2.00470377, 1.35802513]),\n array([2.07142857, 1.02857143])]"
+      "text/plain": [
+       "[array([3.1, 2.1]),\n",
+       " array([2.00470377, 1.35802513]),\n",
+       " array([2.07142857, 1.02857143])]"
+      ]
      },
+     "execution_count": 24,
      "metadata": {},
-     "execution_count": 24
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -442,12 +468,16 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "[array([ 0.08479984, -0.13921309]),\n array([2.07063765, 1.05423795]),\n array([2.11428571, 1.08571429])]"
+      "text/plain": [
+       "[array([ 0.08479984, -0.13921309]),\n",
+       " array([2.07063765, 1.05423795]),\n",
+       " array([2.11428571, 1.08571429])]"
+      ]
      },
+     "execution_count": 25,
      "metadata": {},
-     "execution_count": 25
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -461,12 +491,16 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "[array([ 0.14629765, -0.27220378]),\n array([2.02824962, 1.04872206]),\n array([2.1, 1.1])]"
+      "text/plain": [
+       "[array([ 0.14629765, -0.27220378]),\n",
+       " array([2.02824962, 1.04872206]),\n",
+       " array([2.1, 1.1])]"
+      ]
      },
+     "execution_count": 26,
      "metadata": {},
-     "execution_count": 26
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -480,12 +514,16 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "[array([-0.3214994 ,  0.46502483]),\n array([1.71478702, 0.78231611]),\n array([1.54285714, 0.65714286])]"
+      "text/plain": [
+       "[array([-0.3214994 ,  0.46502483]),\n",
+       " array([1.71478702, 0.78231611]),\n",
+       " array([1.54285714, 0.65714286])]"
+      ]
      },
+     "execution_count": 27,
      "metadata": {},
-     "execution_count": 27
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -499,17 +537,24 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "retraining\n4\n"
+     "output_type": "stream",
+     "text": [
+      "retraining\n",
+      "4\n"
+     ]
     },
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "[array([-1.37001638,  1.46332699]),\n array([1.17678179, 0.37941103]),\n array([ 0.4, -0.2])]"
+      "text/plain": [
+       "[array([-1.37001638,  1.46332699]),\n",
+       " array([1.17678179, 0.37941103]),\n",
+       " array([ 0.4, -0.2])]"
+      ]
      },
+     "execution_count": 28,
      "metadata": {},
-     "execution_count": 28
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -523,12 +568,16 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "[array([0.0396666 , 1.86259413]),\n array([2.10185872, 0.60817663]),\n array([2.4, 0.8])]"
+      "text/plain": [
+       "[array([0.0396666 , 1.86259413]),\n",
+       " array([2.10185872, 0.60817663]),\n",
+       " array([2.4, 0.8])]"
+      ]
      },
+     "execution_count": 29,
      "metadata": {},
-     "execution_count": 29
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -542,12 +591,16 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "[array([ 0.04316096, -0.12501502]),\n array([2.15581766, 1.11772331]),\n array([2.17142857, 1.12857143])]"
+      "text/plain": [
+       "[array([ 0.04316096, -0.12501502]),\n",
+       " array([2.15581766, 1.11772331]),\n",
+       " array([2.17142857, 1.12857143])]"
+      ]
      },
+     "execution_count": 30,
      "metadata": {},
-     "execution_count": 30
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -561,17 +614,24 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "retraining\n6\n"
+     "output_type": "stream",
+     "text": [
+      "retraining\n",
+      "6\n"
+     ]
     },
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "[array([ 0.4274946 , -0.42266369]),\n array([3.01256783, 1.75925194]),\n array([3.25714286, 1.94285714])]"
+      "text/plain": [
+       "[array([ 0.4274946 , -0.42266369]),\n",
+       " array([3.01256783, 1.75925194]),\n",
+       " array([3.25714286, 1.94285714])]"
+      ]
      },
+     "execution_count": 31,
      "metadata": {},
-     "execution_count": 31
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -585,12 +645,16 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "[array([ 0.31359894, -0.15232468]),\n array([2.36146183, 1.51261909]),\n array([2.54285714, 1.65714286])]"
+      "text/plain": [
+       "[array([ 0.31359894, -0.15232468]),\n",
+       " array([2.36146183, 1.51261909]),\n",
+       " array([2.54285714, 1.65714286])]"
+      ]
      },
+     "execution_count": 32,
      "metadata": {},
-     "execution_count": 32
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -604,17 +668,24 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "retraining\n8\n"
+     "output_type": "stream",
+     "text": [
+      "retraining\n",
+      "8\n"
+     ]
     },
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "[array([ 0.31359894, -0.15232468]),\n array([2.36146183, 1.51261909]),\n array([2.54285714, 1.65714286])]"
+      "text/plain": [
+       "[array([ 0.31359894, -0.15232468]),\n",
+       " array([2.36146183, 1.51261909]),\n",
+       " array([2.54285714, 1.65714286])]"
+      ]
      },
+     "execution_count": 33,
      "metadata": {},
-     "execution_count": 33
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -628,12 +699,16 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "[array([0.08030922, 0.01205659]),\n array([2.51237507, 1.62701886]),\n array([2.54285714, 1.65714286])]"
+      "text/plain": [
+       "[array([0.08030922, 0.01205659]),\n",
+       " array([2.51237507, 1.62701886]),\n",
+       " array([2.54285714, 1.65714286])]"
+      ]
      },
+     "execution_count": 34,
      "metadata": {},
-     "execution_count": 34
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -647,12 +722,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "8"
+      "text/plain": [
+       "8"
+      ]
      },
+     "execution_count": 35,
      "metadata": {},
-     "execution_count": 35
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -721,9 +798,11 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "t=  9900, loss=0.03594: 100%|██████████| 10000/10000 [00:05<00:00, 1951.96it/s]\n"
+     "output_type": "stream",
+     "text": [
+      "t=  9900, loss=0.03594: 100%|██████████| 10000/10000 [00:05<00:00, 1951.96it/s]\n"
+     ]
     }
    ],
    "source": [
@@ -773,12 +852,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "matrix([[-0.18977046,  6.24160594]])"
+      "text/plain": [
+       "matrix([[-0.18977046,  6.24160594]])"
+      ]
      },
+     "execution_count": 37,
      "metadata": {},
-     "execution_count": 37
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -791,12 +872,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "tensor([-0.1969,  6.2584], grad_fn=<AddBackward0>)"
+      "text/plain": [
+       "tensor([-0.1969,  6.2584], grad_fn=<AddBackward0>)"
+      ]
      },
+     "execution_count": 38,
      "metadata": {},
-     "execution_count": 38
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -809,12 +892,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "tensor([-0.1898,  6.2416])"
+      "text/plain": [
+       "tensor([-0.1898,  6.2416])"
+      ]
      },
+     "execution_count": 39,
      "metadata": {},
-     "execution_count": 39
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -827,12 +912,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "tensor([ 0.7832, -0.9730])"
+      "text/plain": [
+       "tensor([ 0.7832, -0.9730])"
+      ]
      },
+     "execution_count": 40,
      "metadata": {},
-     "execution_count": 40
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -891,7 +978,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4-final"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
